# pdf-evidence-annotator

./: .gitignore  README.md  docker-compose.yaml
backend/: Cargo.toml  Dockerfile  build.sh  docker-compose.build.yaml
backend/src/: dataset.rs  handlers.rs  main.rs  qdrant.rs
