[package]
name = "pdf-evidence-annotator"
version = "0.1.0"
edition = "2024"

[dependencies]
# Асинхронность и работа с файлами
tokio = {version = "1", features = ["full"]}
tokio-util = {version = "0.7.18", features = ["io"]}

# Сериализация и парсинг JSON
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.150"

# Асинхронный сервер
axum = { version = "0.8.9", features = ["macros"] }
