[package]
name = "pdf-evidence-annotator"
version = "0.1.0"
edition = "2024"

[dependencies]
# Асинхронность и работа с файлами
tokio = {version = "1", features = ["full"]}
tokio-util = {version = "0.7.18", features = ["io"]}

# Сериализация и парсинг JSON
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.150"

# Асинхронный сервер
axum = { version = "0.8.9", features = ["macros"] }

# Клиент Qdrant
qdrant-client = "1.18.0"

# Хэш
md5 = "0.8.0"

# Расширенные функционал футур
futures-util = "0.3.32"

# uuid
uuid = { version = "1.23.1", features = ["v4"] }

# swagger
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }